# ferricast

./: .gitignore  Cargo.toml  README.md  ferricast.doap  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: fr.alexpiquard.ferricast.Devel.json
data/: fr.alexpiquard.ferricast.desktop.in.in  fr.alexpiquard.ferricast.gschema.xml.in  fr.alexpiquard.ferricast.metainfo.xml.in.in  fr.alexpiquard.ferricast.service.in  meson.build
data/resources/: fr.alexpiquard.ferricast.gresource.xml.in  meson.build
data/resources/ui/: editor.ui  render.ui  window.ui
po/: POTFILES.in  fr.po  meson.build
src/: application.rs  config.rs  main.rs
src/core/: cursor.rs  mod.rs  rdp.rs  screencast.rs  utils.rs  video.rs
src/core/render/: formats.rs  mod.rs  pipeline.rs  settings.rs
src/widgets/: mod.rs  timecode.rs  timeline.rs
src/windows/: editor.rs  main.rs  mod.rs  render.rs
